# Smart_Light

components/button/: CMakeLists.txt
components/esp_rainmaker/: idf_component.yml
components/light_driver/: CMakeLists.txt  iot_led.c  light_driver.c
components/light_driver/include/: iot_led.h
smart_light/: CMakeLists.txt  sdkconfig  sdkconfig.gattserver  sdkconfig.localcontrol  sdkconfig.old
smart_light/components/components/bt/host/nimble/nimble/nimble/host/src/: ble_att.c  ble_gap.c  ble_gattc.c  ble_gattc_cache_conn.c  ble_gatts.c  ble_hs.c
smart_light/components/components/mbedtls/mbedtls/: CMakeLists.txt  sbom.yml
smart_light/main/: CMakeLists.txt  app_driver.c  https_server.txt  idf_component.yml  local_control.txt  main.c
smart_light/main/certificate/: ca.crt  ca.key  ca.srl  note.txt  san.cnf  server.crt  server.csr  server.key
smart_light/main/include/: board_esp32c3_devkitc.h
